--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indu Mallampali</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Indu Mallampali's Website!</h1>
-    <p>This site is under construction.</p>
+    <header>
+        <h1>Welcome to Indu Mallampali's Website</h1>
+    </header>
+    <section>
+        <p>This website is under construction. Stay tuned!</p>
+    </section>
 </body>
 </html>
