--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     </header>
     <section>
         <p>This website is under construction. Stay tuned!</p>
+        <nav>
+    <a href="index.html">Home</a> | 
+    <a href="about.html">About Me</a> | 
+    <a href="contact.html">Contact</a>
+</nav>
     </section>
 </body>
 </html>
