--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indu Mallampali</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact - Indu Mallampali</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Indu Mallampali's Website</h1>
+        <h1>Contact Me</h1>
+        <nav>
+            <a href="index.html">Home</a> | 
+            <a href="about.html">About Me</a> | 
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
     <section>
-        <nav>
-    <a href="index.html">Home</a> | 
-    <a href="about.html">About Me</a> | 
-    <a href="contact.html">Contact</a>
-        </nav>
+        <h2>Get in Touch</h2>
+        <p>Email: yourname@example.com</p>
+        <p>Phone: +123-456-7890</p>
+        <p>Socials: <a href="#">LinkedIn</a> | <a href="#">Twitter</a></p>
     </section>
 </body>
 </html>
+
