--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Indu Mallampali</title>
+    <img src="images/Initial Image.webp" alt="My Profile Picture" width="200">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
