--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Indu Mallampali</title>
-    <img src="images/Initial Image.webp" alt="My Profile Picture" width="200">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,10 +15,17 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+
     <section>
         <h2>Who Am I?</h2>
         <p>Hello! I am Indu Mallampali. Welcome to my personal website.</p>
-        <p>This section will contain details about me.</p>
+        <p>This section contains details about me.</p>
+
+        <!-- Image Upload Section -->
+        <h3>My Profile Picture</h3>
+        <img src="images/Initial Image.webp" alt="Indu Mallampali" width="250">
+        
+        <p>If you want to upload a new image, replace <b>profile.jpg</b> in the <code>images/</code> folder.</p>
     </section>
 </body>
 </html>
