--- a/about.html
+++ b/about.html
@@ -10,11 +10,21 @@
 <body>
     <header>
         <h1>About Me</h1>
-        <nav>
-            <a href="index.html">Home</a> | 
-            <a href="about.html">About Me</a> | 
-            <a href="contact.html">Contact</a>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Indu Mallampali</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
     </header>
 
     <section>
