--- a/contact.html
+++ b/contact.html
@@ -3,22 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indu Mallampali</title>
+    <title>Contact Me - Indu Mallampali</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Indu Mallampali</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Header -->
     <header class="text-center text-white" style="background-color: #2C3E50; padding: 80px;">
         <h1>Contact Me</h1>
     </header>
 
+    <!-- Contact Section -->
     <section class="container my-5 text-center">
         <h2>Get in Touch</h2>
         <p>Email: <a href="mailto:yourname@example.com">indumallampali@gmail.com</a></p>
         <p>LinkedIn: <a href="#">www.linkedin.com/in/indukumar-mallampali-89547117b</a></p>
         <p>Twitter: <a href="#">@yourhandle</a></p>
     </section>
+
+    <!-- Bootstrap Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
