--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!-- Navigation Bar -->
+    <!-- Modern Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
         <div class="container">
             <a class="navbar-brand" href="index.html">Indu Mallampali</a>
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto"> <!-- ALIGN BUTTONS TO RIGHT -->
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
@@ -26,18 +26,14 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
-    <header class="text-center text-white" style="background-color: #2C3E50; padding: 80px;">
-        <h1>Contact Me</h1>
-    </header>
-
     <!-- Contact Section -->
-    <section class="container my-5 text-center">
+    <div class="container text-center my-5">
+        <h1>Contact Me</h1>  <!-- MOVED BELOW NAVBAR -->
         <h2>Get in Touch</h2>
         <p>Email: <a href="mailto:yourname@example.com">indumallampali@gmail.com</a></p>
-        <p>LinkedIn: <a href="#">www.linkedin.com/in/indukumar-mallampali-89547117b</a></p>
-        <p>Twitter: <a href="#">@yourhandle</a></p>
-    </section>
+        <p>Phone: +123-456-7890</p>
+        <p>Socials: <a href="#">www.linkedin.com/in/indukumar-mallampali-89547117b</a> | <a href="#">Twitter</a></p>
+    </div>
 
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
