--- a/index.html
+++ b/index.html
@@ -3,25 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indu Mallampali</title>
+    <title>Indu Mallampali - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Contact Me</h1>
-        <nav>
-            <a href="index.html">Home</a> | 
-            <a href="about.html">About Me</a> | 
-            <a href="contact.html">Contact</a>
-        </nav>
+
+    <!-- Modern Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Indu Mallampali</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto"> <!-- ALIGN BUTTONS TO RIGHT -->
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section (Main Welcome Area) -->
+    <header class="text-center text-white" style="background-color: #2C3E50; padding: 100px;">
+        <h1>Welcome to Indu Mallampali's Website</h1>
+        <p class="lead">Your one-stop destination for what I know. More to learn</p>
+        <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
     </header>
-    <section>
-        <h2>Get in Touch</h2>
-        <p>Email: yourname@example.com</p>
-        <p>Phone: +123-456-7890</p>
-        <p>Socials: <a href="#">LinkedIn</a> | <a href="#">Twitter</a></p>
+
+    <!-- About Me Section -->
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>About Me</h2>
+                <p>Hello! I’m Indu Mallampali. Welcome to my personal and professional space where I share my journey, skills, and projects.</p>
+                <a href="about.html" class="btn btn-dark">Read More</a>
+            </div>
+            <div class="col-md-6 text-center">
+                <img src="images/profile.jpg" class="img-fluid rounded-circle" alt="Profile Picture" width="250">
+            </div>
+        </div>
     </section>
+
+    <!-- Bootstrap Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
-
