--- a/about.html
+++ b/about.html
@@ -38,5 +38,19 @@
         
         <p>If you want to upload a new image, replace <b>profile.jpg</b> in the <code>images/</code> folder.</p>
     </section>
+    <!-- Your Page Content Here -->
+
+    <!-- Footer Section -->
+    <footer class="text-center text-white mt-5 py-3" style="background-color: #2C3E50;">
+        <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
+        <p>
+            <a href="about.html" class="text-white">About</a> |
+            <a href="contact.html" class="text-white">Contact</a> |
+            <a href="https://linkedin.com" class="text-white" target="_blank">LinkedIn</a>
+        </p>
+    </footer>
+
+    <!-- Bootstrap Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
