--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indu Mallampali - Home</title>
+    <title>Welcome to Indu Mallampali</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <!-- Modern Navbar -->
+    <!-- Modern Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
         <div class="container">
             <a class="navbar-brand" href="index.html">Indu Mallampali</a>
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto"> <!-- ALIGN BUTTONS TO RIGHT -->
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -26,32 +26,31 @@
         </div>
     </nav>
 
-    <!-- Hero Section (Main Welcome Area) -->
-    <header class="text-center text-white" style="background-color: #2C3E50; padding: 100px;">
-        <h1>Welcome to Indu Mallampali's Website</h1>
-        <p class="lead">Your one-stop destination for what I know. More to learn</p>
-        <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
+    <!-- Hero Section with Background Image -->
+    <header class="text-center text-white d-flex align-items-center justify-content-center"
+        style="background: url('images/background.jpg') no-repeat center center/cover; height: 90vh;">
+        <div>
+            <h1>Welcome to Indu Mallampali's Website</h1>
+            <p class="lead">Your one-stop destination for [your purpose]</p>
+            <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
+        </div>
     </header>
 
-    <!-- About Me Section -->
-    <section class="container my-5">
+    <!-- About Section -->
+    <section class="container my-5 text-center">
         <div class="row">
             <div class="col-md-6">
                 <h2>About Me</h2>
-                <p>Hello! I’m Indu Mallampali. Welcome to my personal and professional space where I share my journey, skills, and projects.</p>
+                <p>Hello! I’m Indu Mallampali. Welcome to my professional space where I share my journey, skills, and projects.</p>
                 <a href="about.html" class="btn btn-dark">Read More</a>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6">
                 <img src="images/profile.jpg" class="img-fluid rounded-circle" alt="Profile Picture" width="250">
             </div>
         </div>
     </section>
 
-    <!-- Bootstrap Script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Your Page Content Here -->
-
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer class="text-center text-white mt-5 py-3" style="background-color: #2C3E50;">
         <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
         <p>
@@ -63,5 +62,6 @@
 
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
