--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
     </nav>
 
-    <!-- Hero Section with Background Image -->
-    <header class="text-center text-white d-flex align-items-center justify-content-center"
-        style="background: url('images/background.jpg') no-repeat center center/cover; height: 90vh;">
-        <div>
+    <!-- Hero Banner Section -->
+    <header class="hero-banner">
+        <img src="images/banner.jpg" alt="Mountain Sunrise Banner">
+        <div class="overlay">
             <h1>Welcome to Indu Mallampali's Website</h1>
             <p class="lead">Your one-stop destination for [your purpose]</p>
             <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
