--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Hero Banner Section -->
     <header class="hero-banner">
-        <img src="images/banner.jpg" alt="Mountain Sunrise Banner">
+        <img src="images/banner.jpeg" alt="Mountain Sunrise Banner">
         <div class="overlay">
             <h1>Welcome to Indu Mallampali's Website</h1>
             <p class="lead">Your one-stop destination for [your purpose]</p>
