--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Indu Mallampali</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+<header class="hero-banner">
+    <div class="overlay">
+        <h1>Welcome to Indu Mallampali's Website</h1>
+        <p class="lead">Your one-stop destination for to know about me</p>
+        <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
+    </div>
+</header>
 <body>
 
     <!-- Modern Navigation Bar -->
