--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <header class="hero-banner">
-    <div class="hero-content">
+    <div class="hero-overlay">
         <h1>Welcome to Indu Mallampali's Website</h1>
-        <p class="lead">Your one-stop destination to know about me</p>
+        <p class="lead">Your one-stop destination for [your purpose]</p>
         <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
     </div>
 </header>
