--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<header class="hero-banner">
-    <div class="hero-overlay">
-        <h1>Welcome to Indu Mallampali's Website</h1>
-        <p class="lead">Your one-stop destination for [your purpose]</p>
-        <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
-    </div>
-</header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Indu Mallampali</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 
-    <!-- Modern Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
         <div class="container">
             <a class="navbar-brand" href="index.html">Indu Mallampali</a>
@@ -26,10 +26,9 @@
         </div>
     </nav>
 
-    <!-- Hero Banner Section -->
+    <!-- Hero Section with Background Image -->
     <header class="hero-banner">
-        <img src="images/banner.jpeg" alt="Mountain Sunrise Banner">
-        <div class="overlay">
+        <div class="hero-content">
             <h1>Welcome to Indu Mallampali's Website</h1>
             <p class="lead">Your one-stop destination for [your purpose]</p>
             <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
