--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="hero-banner">
         <div class="hero-content">
             <h1>Welcome to Indu Mallampali's Website</h1>
-            <p class="lead">Your one-stop destination for Indu Mallampali</p>
+            <p class="lead">Your one-stop destination for [your purpose]</p>
             <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
         </div>
     </header>
