--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="about.html" class="btn btn-dark">Read More</a>
             </div>
             <div class="col-md-6">
-                <img src="images/profile.jpg" class="img-fluid rounded-circle" alt="Profile Picture" width="250">
+                <img src="images/IMG_4784.jpeg" class="img-fluid rounded-circle" alt="Profile Picture" width="250">
             </div>
         </div>
     </section>
