--- a/index.html
+++ b/index.html
@@ -37,18 +37,25 @@
 
     <!-- About Section -->
     <section class="container my-5 text-center">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>About Me</h2>
-                <p>Hello! I’m Indu Mallampali. Welcome to my professional space where I share my journey, skills, and projects.</p>
-                <a href="about.html" class="btn btn-dark">Read More</a>
-            </div>
-            <div class="col-md-6">
-                <img src="images/IMG_4784.jpeg" class="img-fluid rounded-circle" alt="Profile Picture" width="250">
-            </div>
+    <h2>What I Do</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <i class="fas fa-code fa-3x"></i>
+            <h4>Web Development</h4>
+            <p>Building modern, responsive websites with the latest technologies.</p>
         </div>
-    </section>
-
+        <div class="col-md-4">
+            <i class="fas fa-chart-line fa-3x"></i>
+            <h4>SEO & Digital Marketing</h4>
+            <p>Helping businesses grow online with SEO, ads, and social media.</p>
+        </div>
+        <div class="col-md-4">
+            <i class="fas fa-cloud fa-3x"></i>
+            <h4>Cloud & DevOps</h4>
+            <p>Optimizing cloud deployments, automation, and server management.</p>
+        </div>
+    </div>
+</section>
     <!-- Footer -->
     <footer class="text-center text-white mt-5 py-3" style="background-color: #2C3E50;">
         <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
