--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,23 @@
         <p>Phone: +123-456-7890</p>
         <p>Socials: <a href="#">www.linkedin.com/in/indukumar-mallampali-89547117b</a> | <a href="#">Twitter</a></p>
     </div>
-
+    <hr> <!-- Adds a separator line -->
+<h3>Send Me a Message</h3>
+<form class="container my-4" action="https://formspree.io/f/manewyzr" method="POST">
+    <div class="mb-3">
+        <label for="name" class="form-label">Your Name</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+    </div>
+    <div class="mb-3">
+        <label for="email" class="form-label">Your Email</label>
+        <input type="email" class="form-control" id="email" name="email" required>
+    </div>
+    <div class="mb-3">
+        <label for="message" class="form-label">Your Message</label>
+        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Send Message</button>
+</form>
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Your Page Content Here -->
