--- a/about.html
+++ b/about.html
@@ -26,18 +26,21 @@
     </div>
 </nav>
     </header>
-
-    <section>
-        <h2>Who Am I?</h2>
-        <p>Hello! I am Indu Mallampali. Welcome to my personal website.</p>
-        <p>This section contains details about me.</p>
-
-        <!-- Image Upload Section -->
-        <h3>My Profile Picture</h3>
-        <img src="images/Initial Image.webp" alt="Indu Mallampali" width="250">
-        
-        <p>If you want to upload a new image, replace <b>profile.jpg</b> in the <code>images/</code> folder.</p>
-    </section>
+    <section class="container my-5 text-center">
+    <h2>Who Am I?</h2>
+    <p>Hello! I am Indu Mallampali. Welcome to my personal website.</p>
+    <div class="row align-items-center">
+        <div class="col-md-6">
+            <img src="images/profile.jpg" class="img-fluid rounded-circle shadow-lg" alt="Profile Picture" width="250">
+        </div>
+        <div class="col-md-6">
+            <p>
+                This section contains details about me, my journey, and interests. <br>
+                <a href="contact.html" class="btn btn-primary mt-2">Get in Touch</a>
+            </p>
+        </div>
+    </div>
+</section>
     <!-- Your Page Content Here -->
 
     <!-- Footer Section -->
