--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,16 @@
 
     <!-- Contact Section -->
     <div class="container text-center my-5">
-        <h1>Contact Me</h1>  <!-- MOVED BELOW NAVBAR -->
-        <h2>Get in Touch</h2>
-        <p>Email: <a href="mailto:yourname@example.com">indumallampali@gmail.com</a></p>
-        <p>Phone: +123-456-7890</p>
-        <p>Socials: <a href="#">www.linkedin.com/in/indukumar-mallampali-89547117b</a> | <a href="#">Twitter</a></p>
+        <section class="container my-5 text-center">
+    <h2>Get in Touch</h2>
+    <p><strong>Email:</strong> <a href="mailto:indumallampali@gmail.com">indumallampali@gmail.com</a></p>
+    <p><strong>Phone:</strong> +123-456-7890</p>
+    
+    <div class="social-icons">
+        <a href="https://linkedin.com/in/indukumar-mallampali-89547117b" class="btn btn-dark">LinkedIn</a>
+        <a href="https://twitter.com" class="btn btn-info">Twitter</a>
+    </div>
+</section>
     </div>
     <hr> <!-- Adds a separator line -->
 <h3>Send Me a Message</h3>
