--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <section class="container my-5 text-center">
     <h2>Get in Touch</h2>
     <p><strong>Email:</strong> <a href="mailto:indumallampali@gmail.com">indumallampali@gmail.com</a></p>
-    <p><strong>Phone:</strong> +123-456-7890</p>
+    <p><strong>Phone:</strong> +1251-3914689</p>
     
     <div class="social-icons">
         <a href="https://linkedin.com/in/indukumar-mallampali-89547117b" class="btn btn-dark">LinkedIn</a>
