--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indu Mallampali</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/style-new.css">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
     <p>Hello! I am Indu Mallampali. Welcome to my personal website.</p>
     <div class="row align-items-center">
         <div class="col-md-6">
-            <img src="images/profile.jpg" class="img-fluid rounded-circle shadow-lg" alt="Profile Picture" width="250">
+            <img src="images/IMG_4784.jpeg" class="img-fluid rounded-circle shadow-lg" alt="Profile Picture" width="250">
         </div>
         <div class="col-md-6">
             <p>
