--- a/about.html
+++ b/about.html
@@ -27,11 +27,11 @@
 </nav>
     </header>
     <section class="container my-5 text-center">
-    <h2>Who Am I?</h2>
-    <p>Hello! I am Indu Mallampali. Welcome to my personal website.</p>
-    <div class="row align-items-center">
+        <h2>Who Am I?</h2>
+            <p>Hello! I am Indu Mallampali. Welcome to my personal website.</p>
+        <div class="row align-items-center">
         <div class="col-md-6 text-center">
-            <img src="images/profile.jpg" class="img-fluid shadow-lg" alt="Profile Picture" width="300">
+            <img src="images/IMG_4784.jpeg" class="img-fluid shadow-lg" alt="Profile Picture" width="300">
         </div>
         <div class="col-md-6">
             <p>This section contains details about me, my journey, and interests.</p>
