--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         <div class="hero-content">
             <h1>Welcome to Indu Mallampali's Website</h1>
             <p class="lead">Your one-stop destination for Indu Mallampali</p>
-            <a href="about.html" class="btn btn-danger btn-lg">Learn More</a>
+                <a href="about.html" class="btn btn-primary btn-lg">About Me</a>
+                <a href="services.html" class="btn btn-success btn-lg">Services</a>
+                <a href="projects.html" class="btn btn-info btn-lg">My Work</a>
+                <a href="entertainment.html" class="btn btn-warning btn-lg">Entertainment 🎬</a>
+                <a href="contact.html" class="btn btn-dark btn-lg">Contact Me</a>
         </div>
     </header>
 
@@ -42,18 +46,18 @@
     <div class="row">
         <div class="col-md-4">
             <i class="fas fa-code fa-3x"></i>
-            <h4>Web Development</h4>
-            <p>Building modern, responsive websites with the latest technologies.</p>
+            <h4>Release Management</h4>
+            <p>Managing software releases efficiently with best practices.</p>
         </div>
         <div class="col-md-4">
             <i class="fas fa-chart-line fa-3x"></i>
-            <h4>SEO & Digital Marketing</h4>
-            <p>Helping businesses grow online with SEO, ads, and social media.</p>
+            <h4>DevOps & CI/CD</h4>
+            <p>Automating deployments and ensuring smooth CI/CD pipelines.</p>
         </div>
         <div class="col-md-4">
             <i class="fas fa-cloud fa-3x"></i>
-            <h4>Cloud & DevOps</h4>
-            <p>Optimizing cloud deployments, automation, and server management.</p>
+            <h4>Security & Compliance</h4>
+            <p>Implementing security best practices and compliance strategies.</p>
         </div>
     </div>
 </section>
