--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class="hero-content">
             <h1>Welcome to Indu Mallampali's Website</h1>
             <p class="lead">Your one-stop destination for Indu Mallampali</p>
-                <a href="about.html" class="btn btn-primary btn-lg">About Me</a>
-                <a href="services.html" class="btn btn-success btn-lg">Services</a>
-                <a href="projects.html" class="btn btn-info btn-lg">My Work</a>
-                <a href="entertainment.html" class="btn btn-warning btn-lg">Entertainment 🎬</a>
-                <a href="contact.html" class="btn btn-dark btn-lg">Contact Me</a>
+                <a href="about.html" class="btn btn-lg" style="background-color: #6C5CE7; color: white;">About Me</a>
+                <a href="services.html" class="btn btn-lg" style="background-color: #1ABC9C; color: white;">Services</a>
+                <a href="projects.html" class="btn btn-lg" style="background-color: #E67E22; color: white;">My Work</a>
+                <a href="entertainment.html" class="btn btn-lg" style="background-color: #E74C3C; color: white;">Entertainment 🎬</a>
+                <a href="contact.html" class="btn btn-lg" style="background-color: #2C3E50; color: white;">Contact Me</a>
         </div>
     </header>
 
