--- a/entertainment.html
+++ b/entertainment.html
@@ -26,14 +26,19 @@
     </nav>
 
     <!-- Entertainment Section -->
-    <section class="container text-center my-5">
-        <h1>Entertainment Hub 🎬</h1>
-        <p>Explore my movie reviews and original storylines!</p>
-        
-        <a href="movie-reviews.html" class="btn btn-danger btn-lg">Movie Reviews 🍿</a>
-        <a href="storylines.html" class="btn btn-secondary btn-lg">Storylines 📖</a>
-    </section>
-
+<div class="container text-center my-5">
+    <h1>Entertainment Hub 🎬</h1>
+    <p>Explore my movie reviews and original storylines!</p>
+    
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-3">
+            <a href="movie-reviews.html" class="btn btn-danger btn-lg w-100">Movie Reviews 🍿</a>
+        </div>
+        <div class="col-md-3">
+            <a href="storylines.html" class="btn btn-secondary btn-lg w-100">Storylines 📖</a>
+        </div>
+    </div>
+</div>
     <!-- Footer -->
     <footer class="text-center text-white mt-5 py-3" style="background-color: #2C3E50;">
         <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
