--- a/entertainment.html
+++ b/entertainment.html
@@ -26,19 +26,15 @@
     </nav>
 
     <!-- Entertainment Section -->
-<div class="container text-center my-5">
+<section class="container text-center my-5">
     <h1>Entertainment Hub 🎬</h1>
     <p>Explore my movie reviews and original storylines!</p>
-    
-    <div class="row justify-content-center mt-4">
-        <div class="col-md-3">
-            <a href="movie-reviews.html" class="btn btn-danger btn-lg w-100">Movie Reviews 🍿</a>
-        </div>
-        <div class="col-md-3">
-            <a href="storylines.html" class="btn btn-secondary btn-lg w-100">Storylines 📖</a>
-        </div>
+
+    <div class="d-flex justify-content-center mt-4">
+        <a href="movie-reviews.html" class="btn btn-danger btn-lg mx-2 px-4">Movie Reviews 🍿</a>
+        <a href="storylines.html" class="btn btn-secondary btn-lg mx-2 px-4">Storylines 📖</a>
     </div>
-</div>
+</section>
     <!-- Footer -->
     <footer class="text-center text-white mt-5 py-3" style="background-color: #2C3E50;">
         <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
