--- a/entertainment.html
+++ b/entertainment.html
@@ -30,9 +30,13 @@
     <h1>Entertainment Hub 🎬</h1>
     <p>Explore my movie reviews and original storylines!</p>
 
-    <div class="d-flex justify-content-center mt-4">
-        <a href="movie-reviews.html" class="btn btn-danger btn-lg mx-2 px-4">Movie Reviews 🍿</a>
-        <a href="storylines.html" class="btn btn-secondary btn-lg mx-2 px-4">Storylines 📖</a>
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-4 d-flex justify-content-center">
+            <a href="movie-reviews.html" class="btn btn-danger btn-lg custom-btn">Movie Reviews 🍿</a>
+        </div>
+        <div class="col-md-4 d-flex justify-content-center">
+            <a href="storylines.html" class="btn btn-secondary btn-lg custom-btn">Storylines 📖</a>
+        </div>
     </div>
 </section>
     <!-- Footer -->
