--- a/movie-reviews.html
+++ b/movie-reviews.html
@@ -34,6 +34,28 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<section class="container text-center my-5">
+    <h1>Movie Reviews 🍿</h1>
+    <p>Check out my latest movie reviews and recommendations!</p>
+    <ul id="reviews-list" class="list-group text-start mt-4"></ul>
+</section>
 
+<script>
+    async function loadReviews() {
+        const response = await fetch("reviews.json"); // Fetch JSON file
+        const data = await response.json();
+
+        const list = document.getElementById("reviews-list");
+        list.innerHTML = "";  
+
+        data.forEach(review => {
+            list.innerHTML += `<li class="list-group-item"><a href="#">${review.title}</a> - ${review.content.substring(0, 100)}...</li>`;
+        });
+    }
+
+    loadReviews();
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
