--- a/movie-reviews.html
+++ b/movie-reviews.html
@@ -39,7 +39,7 @@
     <p>Check out my latest movie reviews and recommendations!</p>
     
     <!-- New Reviews Section -->
-    <h2 class="new-reviews-heading">🔥 New Flashing 🔥</h2>
+    <h2 class="new-reviews-heading">🔥 New 🔥</h2>
     <ul id="new-reviews-list" class="list-group text-start mt-4"></ul>
 
     <!-- Archive Section -->
