--- a/review.html
+++ b/review.html
@@ -31,29 +31,16 @@
     <section class="container my-5 text-center">
         <h1 id="review-title"></h1>
         <p id="review-content" class="lead"></p>
+        <a href="movie-reviews.html" class="btn btn-primary">⬅ Back to Reviews</a>
     </section>
 
     <!-- Footer -->
     <footer class="text-center text-white py-3" style="background-color: #2C3E50;">
         <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
-        <a href="about.html" class="text-white">About</a> |
-        <a href="contact.html" class="text-white">Contact</a> |
-        <a href="https://linkedin.com" class="text-white">LinkedIn</a>
     </footer>
 
-    <!-- JavaScript to Load Review -->
-    <script>
-        // Get URL parameters
-        const urlParams = new URLSearchParams(window.location.search);
-        const title = urlParams.get('title');
-        const content = urlParams.get('content');
+    <!-- JavaScript -->
+    <script src="script.js"></script>
 
-        // Update Page Content
-        document.getElementById("review-title").textContent = title;
-        document.getElementById("review-content").textContent = content;
-        document.getElementById("page-title").textContent = title + " - Movie Review";
-    </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
