--- a/movie-reviews.html
+++ b/movie-reviews.html
@@ -37,15 +37,14 @@
 <section class="container my-5 text-center">
     <h1>Movie Reviews 🍿</h1>
     <p>Check out my latest movie reviews and recommendations!</p>
-    
-    <!-- New Reviews Section -->
-    <h2 class="new-reviews-heading">🔥 New 🔥</h2>
-    <ul id="new-reviews-list" class="list-group text-start mt-4"></ul>
 
-    <!-- Archive Section -->
-    <h3 class="archive-heading mt-5">📜 Older Reviews 📜</h3>
-    <ul id="old-reviews-list" class="list-group text-start mt-4"></ul>
+    <h2>🔥 New 🔥</h2>
+    <div id="newFlashing"></div>
+
+    <h2>📜 Older Reviews 📜</h2>
+    <div id="olderReviews"></div>
 </section>
+
 <script src="script.js"></script>
 </body>
 </html>
