--- a/review.html
+++ b/review.html
@@ -28,10 +28,12 @@
     </nav>
 
     <!-- Movie Review Section -->
-    <section class="container my-5 text-center">
-        <h1 id="review-title"></h1>
-        <p id="review-content" class="lead"></p>
-        <a href="movie-reviews.html" class="btn btn-primary">⬅ Back to Reviews</a>
+    <section class="container my-5">
+        <h1 id="review-title" class="text-center"></h1>
+        <div id="review-content" class="lead p-4 border rounded bg-light"></div>
+        <div class="text-center mt-4">
+            <a href="movie-reviews.html" class="btn btn-primary">⬅ Back to Reviews</a>
+        </div>
     </section>
 
     <!-- Footer -->
@@ -40,7 +42,32 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script>
+        async function loadReview() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const fileName = urlParams.get('file');
+
+            if (!fileName) {
+                document.getElementById("review-content").textContent = "No review selected.";
+                return;
+            }
+
+            // GitHub Raw File URL (Replace with your username & repo)
+            const rawFileUrl = `https://raw.githubusercontent.com/Indukumarm/indumallampali.com/main/reviews/${fileName}`;
+
+            try {
+                const response = await fetch(rawFileUrl);
+                const text = await response.text();
+
+                document.getElementById("review-title").textContent = fileName.replace(".txt", "").replace(/-/g, " ").toUpperCase();
+                document.getElementById("review-content").innerHTML = text.replace(/\n/g, "<br>");
+            } catch (error) {
+                document.getElementById("review-content").textContent = "Error loading review.";
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", loadReview);
+    </script>
 
 </body>
 </html>
