--- a/review.html
+++ b/review.html
@@ -6,6 +6,7 @@
     <title id="page-title">Movie Review</title>
     <link href="styles/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' https://cdn.jsdelivr.net; img-src 'self' data:;">
 </head>
 <body>
 
