--- a/index.html
+++ b/index.html
@@ -30,15 +30,23 @@
 
     <!-- Hero Section with Background Image -->
     <header class="hero-banner">
-        <div class="hero-content">
-            <h1>Welcome to Indu Mallampali's Website</h1>
-            <p class="lead">Your one-stop destination for Indu Mallampali</p>
-                <a href="about.html" class="btn btn-lg" style="background-color: #6C5CE7; color: white;">About Me</a>
-                <a href="services.html" class="btn btn-lg" style="background-color: #1ABC9C; color: white;">Services</a>
-                <a href="projects.html" class="btn btn-lg" style="background-color: #E67E22; color: white;">My Work</a>
-                <a href="entertainment.html" class="btn btn-lg" style="background-color: #E74C3C; color: white;">Entertainment 🎬</a>
-                <a href="contact.html" class="btn btn-lg" style="background-color: #2C3E50; color: white;">Contact Me</a>
-        </div>
+        <div class="hero-content text-center">
+    <h1>Indu Mallampali</h1>
+    <p class="lead">Welcome to my <strong>corner of the internet!</strong></p>
+    <ul class="hero-list">
+        <li>🚀 Love <strong>technology</strong>? You’re in the right place.</li>
+        <li>🎬 Enjoy <strong>movies and storytelling</strong>? Let’s talk.</li>
+        <li>💡 Want to explore <strong>new ideas</strong>? You’ll love it here!</li>
+    </ul>
+    <p class="hero-invite">Scroll down and let’s explore! ⬇</p>
+    
+    <!-- Keeping the existing buttons as is -->
+    <a href="about.html" class="btn btn-lg" style="background-color: #6C5CE7; color: white;">About Me</a>
+    <a href="services.html" class="btn btn-lg" style="background-color: #1ABC9C; color: white;">Services</a>
+    <a href="projects.html" class="btn btn-lg" style="background-color: #E67E22; color: white;">My Work</a>
+    <a href="entertainment.html" class="btn btn-lg" style="background-color: #E74C3C; color: white;">Entertainment 🎬</a>
+    <a href="contact.html" class="btn btn-lg" style="background-color: #2C3E50; color: white;">Contact Me</a>
+</div>
     </header>
 
     <!-- About Section -->
