--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <!-- Navigation Bar  -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3E50;">
         <div class="container">
             <a class="navbar-brand" href="index.html">Indu Mallampali</a>
@@ -31,45 +31,48 @@
     <!-- Hero Section with Background Image -->
     <header class="hero-banner">
         <div class="hero-content text-center">
-    <h1>Indu Mallampali</h1>
-    <p class="lead">Welcome to my <strong>corner of the internet!</strong></p>
-    <ul class="hero-list">
-        <li>🚀 Love <strong>technology</strong>? You’re in the right place.</li>
-        <li>🎬 Enjoy <strong>movies and storytelling</strong>? Let’s talk.</li>
-        <li>💡 Want to explore <strong>new ideas</strong>? You’ll love it here!</li>
-    </ul>
-    <p class="hero-invite">Scroll down and let’s explore! ⬇</p>
-    
-    <!-- Keeping the existing buttons as is -->
-    <a href="about.html" class="btn btn-lg" style="background-color: #6C5CE7; color: white;">About Me</a>
-    <a href="services.html" class="btn btn-lg" style="background-color: #1ABC9C; color: white;">Services</a>
-    <a href="projects.html" class="btn btn-lg" style="background-color: #E67E22; color: white;">My Work</a>
-    <a href="entertainment.html" class="btn btn-lg" style="background-color: #E74C3C; color: white;">Entertainment 🎬</a>
-    <a href="contact.html" class="btn btn-lg" style="background-color: #2C3E50; color: white;">Contact Me</a>
-</div>
+            <h1>Indu Mallampali</h1>
+            <p class="lead">Welcome to my <strong>corner of the internet!</strong></p>
+
+            <!-- Floating Animated Text -->
+            <div class="floating-text">
+                <span>🚀 Love <strong>technology</strong>? You’re in the right place.</span>
+                <span>🎬 Enjoy <strong>movies and storytelling</strong>? Let’s talk.</span>
+                <span>💡 Want to explore <strong>new ideas</strong>? You’ll love it here!</span>
+                <span>⬇ Scroll down and let’s explore! ⬇</span>
+            </div>
+            
+            <!-- Buttons -->
+            <a href="about.html" class="btn btn-lg" style="background-color: #6C5CE7; color: white;">About Me</a>
+            <a href="services.html" class="btn btn-lg" style="background-color: #1ABC9C; color: white;">Services</a>
+            <a href="projects.html" class="btn btn-lg" style="background-color: #E67E22; color: white;">My Work</a>
+            <a href="entertainment.html" class="btn btn-lg" style="background-color: #E74C3C; color: white;">Entertainment 🎬</a>
+            <a href="contact.html" class="btn btn-lg" style="background-color: #2C3E50; color: white;">Contact Me</a>
+        </div>
     </header>
 
     <!-- About Section -->
     <section class="container my-5 text-center">
-    <h2>What I Do</h2>
-    <div class="row">
-        <div class="col-md-4">
-            <i class="fas fa-code fa-3x"></i>
-            <h4>Release Management</h4>
-            <p>Managing software releases efficiently with best practices.</p>
+        <h2>What I Do</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <i class="fas fa-code fa-3x"></i>
+                <h4>Release Management</h4>
+                <p>Managing software releases efficiently with best practices.</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fas fa-chart-line fa-3x"></i>
+                <h4>DevOps & CI/CD</h4>
+                <p>Automating deployments and ensuring smooth CI/CD pipelines.</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fas fa-cloud fa-3x"></i>
+                <h4>Security & Compliance</h4>
+                <p>Implementing security best practices and compliance strategies.</p>
+            </div>
         </div>
-        <div class="col-md-4">
-            <i class="fas fa-chart-line fa-3x"></i>
-            <h4>DevOps & CI/CD</h4>
-            <p>Automating deployments and ensuring smooth CI/CD pipelines.</p>
-        </div>
-        <div class="col-md-4">
-            <i class="fas fa-cloud fa-3x"></i>
-            <h4>Security & Compliance</h4>
-            <p>Implementing security best practices and compliance strategies.</p>
-        </div>
-    </div>
-</section>
+    </section>
+
     <!-- Footer -->
     <footer class="text-center text-white mt-5 py-3" style="background-color: #2C3E50;">
         <p>© 2024 Indu Mallampali. All Rights Reserved.</p>
