--- a/review.html
+++ b/review.html
@@ -71,6 +71,6 @@
 
 document.addEventListener("DOMContentLoaded", loadReview);
     </script>
-
+<script src="script.js"></script>
 </body>
 </html>
