--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Center: 3D spinning logo -->
       <div class="logo-3d">
         <model-viewer 
-          src="https://yourdomain.com/path-to-logo.glb" 
+          src="https://github.com/Indukumarm/indumallampali.com/blob/dfb5273042c52616d0064c89201a359a9543a8b3/images/IM%203D%20LOGO.gltf" 
           alt="3D Logo"
           auto-rotate 
           rotation-per-second="30deg"
