--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
 
-  <!-- New site header -->
+  <!-- Site Header -->
   <header class="site-header">
     <div class="nav-container">
-      <!-- Left: Name -->
+      <!-- Left: Brand Name -->
       <a href="/" class="logo">Indu Mallampali</a>
 
-      <!-- Center: 3D spinning logo -->
+      <!-- Center: 3D Logo -->
       <div class="logo-3d">
         <model-viewer 
-          src="/images/IM%203D%20LOGO.gltf" 
+          src="images/IM%203D%20LOGO.gltf" 
           alt="3D Logo"
           auto-rotate 
           rotation-per-second="30deg"
           camera-controls 
           disable-zoom 
           interaction-prompt="none" 
-          style="width: 80px; height: 80px;">
+          style="width: 60px; height: 60px;">
         </model-viewer>
       </div>
 
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <!-- Main Sections -->
+  <!-- About Section -->
   <section id="about">
     <div class="container">
       <h2>About Me</h2>
@@ -49,6 +49,7 @@
     </div>
   </section>
 
+  <!-- Portfolio Section -->
   <section id="portfolio">
     <div class="container">
       <h2>My Work</h2>
@@ -65,15 +66,17 @@
     </div>
   </section>
 
+  <!-- Videos Section -->
   <section id="videos">
     <div class="container">
       <h2>Videos</h2>
       <div class="video-wrapper">
-        <iframe src="https://www.youtube.com/embed/yourvideoid" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </section>
 
+  <!-- Logs Section -->
   <section id="logs">
     <div class="container">
       <h2>Logs & Updates</h2>
@@ -84,6 +87,7 @@
     </div>
   </section>
 
+  <!-- Blog Section -->
   <section id="blog">
     <div class="container">
       <h2>Blog</h2>
@@ -91,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact">
     <div class="container">
       <h2>Contact Me</h2>
@@ -98,6 +103,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Indukumar. All rights reserved.</p>
   </footer>
