--- a/index.html
+++ b/index.html
@@ -32,46 +32,46 @@
 
       <!-- Right: Navigation -->
       <nav class="main-nav">
-        <a href="#about">About</a>
-        <a href="#portfolio">Work</a>
-        <a href="#videos">Videos</a>
+        <a href="#gallery-video">Video</a>
+        <a href="#gallery-one">Visuals</a>
+        <a href="#gallery-two">BTS</a>
         <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- About Section -->
-  <section id="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>I write stories that blend raw emotion with real-world drama. This site is my space to share my screenplays, thoughts, and journey.</p>
+  <!-- GitHub Video Section -->
+  <section id="gallery-video">
+    <div class="video-container">
+      <video autoplay muted loop controls playsinline>
+        <source src="media/hero-video.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
     </div>
   </section>
 
-  <!-- Portfolio Section -->
-  <section id="portfolio">
+  <!-- Image Grid One -->
+  <section id="gallery-one">
     <div class="container">
-      <h2>My Work</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Sideways</h3>
-          <p>A political crime thriller exploring power and betrayal.</p>
-        </div>
-        <div class="card">
-          <h3>Village Dust</h3>
-          <p>An intense rural drama about identity and justice.</p>
-        </div>
+      <h2>Visuals Collection</h2>
+      <div class="image-grid">
+        <img src="images/img1.jpg" alt="Gallery Image 1" />
+        <img src="images/img2.jpg" alt="Gallery Image 2" />
+        <img src="images/img3.jpg" alt="Gallery Image 3" />
+        <img src="images/img4.jpg" alt="Gallery Image 4" />
       </div>
     </div>
   </section>
 
-  <!-- Videos Section -->
-  <section id="videos">
+  <!-- Image Grid Two -->
+  <section id="gallery-two">
     <div class="container">
-      <h2>Videos</h2>
-      <div class="video-wrapper">
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+      <h2>Behind the Scenes</h2>
+      <div class="image-grid">
+        <img src="images/bts1.jpg" alt="Behind the Scenes 1" />
+        <img src="images/bts2.jpg" alt="Behind the Scenes 2" />
+        <img src="images/bts3.jpg" alt="Behind the Scenes 3" />
       </div>
     </div>
   </section>
