--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="gallery-video">
     <div class="video-container">
       <video autoplay muted loop controls playsinline>
-        <source src="media/hero-video.mp4" type="video/mp4" />
+        <source src="https://github.com/Indukumarm/indumallampali.com/blob/a962f81acd095394057aee55a17e39bfbfd37c82/images/Personal%20Website%20video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
