--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
     </div>
   </header>
 
-  <!-- GitHub Video Section -->
-  <section id="gallery-video">
-    <div class="video-container">
-      <video autoplay muted loop controls playsinline>
-        <source src="https://github.com/Indukumarm/indumallampali.com/blob/a962f81acd095394057aee55a17e39bfbfd37c82/images/Personal%20Website%20video.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </section>
-
+  <!-- Hero Video Section -->
+<section class="hero-video">
+  <video autoplay muted loop playsinline>
+    <source src="https://github.com/Indukumarm/indumallampali.com/blob/4c15d6a984a31caffb0bfd7e80d284d5d8f10752/images/Personal%20Website%20video.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+  <div class="hero-overlay">
+    <h1>Indu Mallampali</h1>
+    <p>Writer | Storyteller | Visual Artist</p>
+  </div>
+</section>
   <!-- Image Grid One -->
   <section id="gallery-one">
     <div class="container">
