--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Hero Video Section -->
 <section class="hero-video">
   <video autoplay muted loop playsinline>
-    <source src="https://github.com/Indukumarm/indumallampali.com/blob/4c15d6a984a31caffb0bfd7e80d284d5d8f10752/images/Personal%20Website%20video.mp4" type="video/mp4" />
+    <source src="https://raw.githubusercontent.com/Indukumarm/indumallampali.com/main/images/Personal%20Website%20video.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
   <div class="hero-overlay">
